--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.6.0",
     "react-resizable-panels": "^2.1.3",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
